Add: hover affects on buttons

--- a/style.css
+++ b/style.css
@@ -44,20 +44,49 @@
   border: none;
   font-size: 18px;
   color: var(--primary-text-color);
+  border: 1px solid transparent;
+  transition: all 0.5s;
 }
 
 .button-solid { 
-  background: var(--primary-linear-color);
+  background-image: var(--primary-linear-color);
+  background-size: 200%;
+}
+
+.button-solid:hover { 
+  background-position: 100%;
+  transition: all 1s ease-in-out;
 }
 
 .button-transparent {
   background-color: transparent;
 }
 
+.button-transparent:hover {
+  border: 1px solid #fff;
+}
+
 .button-yellow {
   color: #000 !important;
   font-weight: 700;
   background-color: var(--secondary-button-color);
+}
+
+.button-yellow:hover {
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff !important;
+  transition: all .7s;
+}
+
+.button-black {
+  background-color: #000;
+}
+
+.button-black:hover {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
 }
 
 .link-list {
@@ -737,16 +766,15 @@ body {
 }
 
 .newsletter-form_button {
-  border: none;
   cursor: pointer;
   font-size: 24px;
-  padding: 18px 42px;
+  padding: 15px 42px;
   border-radius: 38px;
   line-height: 28.13px;
   background-color: #000;
   color: var(--primary-text-color);
   position: absolute;
-  top: -5px;
+  top: 0;
   right: 0;
 }
 
@@ -795,7 +823,6 @@ body {
 
   .newsletter-form_button {
     padding: 10px 18px;
-    top: 0;
   }
 }
 
