--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@
 
 @font-face {
   font-family: "Gilroy";
-  src: url(fonts/gilroy/Gilroy-Bold.ttf
-  );
+  src: url(fonts/gilroy/Gilroy-Bold.ttf);
   font-weight: 700;
 }
 
